--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
+body {
+  background-image : url("./images/image.jpg") ;
+  height: 100%;
+ 
+  background-size: cover;
+}
+
+.btnStyle{
+  background-color: rgba(255, 255, 255 , 0.4);
+ 
+  font: inherit;
+  border : 2px solid rgba(0, 0, 255 , 0.4);
+  border-radius: 8px;
+  
+  padding: 8px;
+  cursor: pointer;
+}
+
 .App {
   text-align: center;
 }
